# parestsense

./: .gitignore  CMakeLists.txt  clean.sh  download_git_deps.sh  ff  generateGraphs.cpp  graph.example  graph.py  main.cpp  parest  parest.cpp  parestSense  readOutput.cpp  setup.sh  test  test.toml
